[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/park/park.gd" type="Script" id=1]
[ext_resource path="res://scenes/park/park.png" type="Texture" id=2]
[ext_resource path="res://dee/deefrontstatic.png" type="Texture" id=3]
[ext_resource path="res://vee/vee.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/park/parkmusic.ogg" type="AudioStream" id=5]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 900, 0, 0, 0, 0, 0, 900, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 0 )
}

[node name="park" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="." index="0"]

position = Vector2( 450, 300 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="dee" type="Sprite" parent="." index="1"]

position = Vector2( 475.346, 188.366 )
texture = ExtResource( 3 )

[node name="vee" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 510, 370 )
input_pickable = true
SPEED = 300

[node name="fly_time" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="end_time" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 60.0
one_shot = true
autostart = true

[node name="Position2D" type="Position2D" parent="." index="5"]

position = Vector2( 274.792, 267.036 )
_sections_unfolded = [ "Transform" ]

[node name="fly_path" type="Path2D" parent="." index="6"]

position = Vector2( 160, 100 )
scale = Vector2( 0.622222, 0.65 )
curve = SubResource( 1 )

[node name="fly_spawnloc" type="PathFollow2D" parent="fly_path" index="0"]

offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="music" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = true
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="vee" to="vee" method="_on_vee_body_entered"]

[connection signal="body_exited" from="vee" to="vee" method="_on_vee_body_exited"]

[connection signal="timeout" from="fly_time" to="." method="_on_fly_time_timeout"]

[connection signal="timeout" from="end_time" to="." method="_on_end_time_timeout"]


